[gd_scene load_steps=9 format=3 uid="uid://bhnv1dsggssil"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_4u0k0"]
[ext_resource type="Texture2D" uid="uid://c7j841b5u4tu3" path="res://assets/icons/resume.png" id="1_kdmgn"]
[ext_resource type="Theme" uid="uid://bt3yyqwlp4f7j" path="res://themes/title_text.tres" id="2_78oyc"]
[ext_resource type="Texture2D" uid="uid://cgl1iul3vlrds" path="res://assets/icons/main-menu.png" id="2_febfx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gy317"]
bg_color = Color(0.113725, 0.113725, 0.113725, 0.819608)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_ntodv"]
Panel/styles/panel = SubResource("StyleBoxFlat_gy317")

[sub_resource type="Theme" id="Theme_klyxt"]
Label/font_sizes/font_size = 25

[sub_resource type="Theme" id="Theme_adqqq"]
Label/font_sizes/font_size = 25

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4u0k0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -206.0
offset_right = 203.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ntodv")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_78oyc")
text = "PAUSED"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Resume" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("1_kdmgn")

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = SubResource("Theme_klyxt")
text = "Resume"
horizontal_alignment = 1
justification_flags = 162

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainMenu" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("2_febfx")

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = SubResource("Theme_adqqq")
text = "Main Menu"
horizontal_alignment = 1

[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_hold"]
[connection signal="mouse_exited" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_release"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_button_pressed"]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MainMenu" to="." method="_on_main_menu_hold"]
[connection signal="mouse_exited" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MainMenu" to="." method="_on_main_menu_release"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MainMenu" to="." method="_on_main_menu_pressed"]
